--- a/src/App.scss
+++ b/src/App.scss
@@ -31,8 +31,8 @@ body {
 }
 
 html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 8px;
+    // border-radius: 0;
+    // width: 8px;
 }
 
 html *::-webkit-scrollbar-thumb {
