--- a/src/App.scss
+++ b/src/App.scss
@@ -85,11 +85,11 @@ h6 {
 
 .expanded-table {
     .ant-table-row {
-        background-color: #fafafa;
+        background-color: #f8f8f8;
     }
     .ant-table-thead {
         .ant-table-cell {
-            background-color: #fafafa !important;
+            background-color: #f8f8f8 !important;
         }
     }
     // .ant-table-tbody {
@@ -102,7 +102,7 @@ h6 {
 .main-table {
     .ant-table-thead {
         .ant-table-cell {
-            background-color: #ededed;
+            background-color: #f8f8f8;
         }
     }
 
